# LiteratureGraphContext

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.cursor/skills/docsconsolidation/: SKILL.md
.cursor/skills/knowledgecollector/: SKILL.md
.cursor/skills/literaturegraphcontext/: SKILL.md
.github/workflows/: publish.yml  test.yml
docs/: LGC_KNOWLEDGE_BASE.md  TUTORIAL.md  cursor_bysgnn_research_evaluation.md  cursor_bysgnn_research_evaluation2.md  cursor_bysgnn_research_evaluation3.md  literature_graph_mcp_implementation_plan.deprecated.md  literature_graph_mcp_implementation_plan.md
examples/papers/: mobility_gnn_2024.bib
playground/idea_matrix/: idea_matrix.html
scripts/: build_viz.ps1  generate_demo_pdfs.py  setup_examples.py  setup_viz_website.ps1  smoke_mcp.py
src/litgraph/: __init__.py  __main__.py  context.py
src/litgraph/cli/: config_manager.py  helpers.py  main.py
src/litgraph/core/: jobs.py  watcher.py
src/litgraph/daemon/: DESIGN.md  __init__.py  runtime.py  scheduler.py  secrets.py  server.py  state.py
src/litgraph/daemon/static/: common.css  home.html  settings.html
src/litgraph/extractor/: llm_extractor.py  prompts.py  schema.py
src/litgraph/extractor/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
src/litgraph/graph/: citation_builder.py  db_factory.py  entity_catalog.py  entity_disambiguator.py  entity_resolver.py  graph_builder.py  graph_store.py  kuzu_store.py  neo4j_store.py  normalizer.py  reasoning.py  reference_linker.py
src/litgraph/ingest/: __init__.py  arxiv.py  base.py  bytes_adapter.py  dedup.py  local.py  registry.py  url.py  zotero.py
src/litgraph/integrations/: semantic_scholar.py  zotero.py
src/litgraph/mcp/: http_mount.py  server.py  setup_wizard.py  smoke_cases.py  test_runner.py  tool_definitions.py  tool_service.py  watch_manager.py
src/litgraph/mcp/handlers/: query_handlers.py
src/litgraph/parser/: bib_linker.py  bib_parser.py  dispatcher.py  heading_detector.py  md_parser.py  pdf_parser.py  reference_parser.py  section_splitter.py
src/litgraph/query/: comparison.py  embedding_store.py  gap_analysis.py  paper_finder.py  paper_search.py  related_work.py  rrf.py
src/litgraph/scanner/: file_scanner.py  hash_cache.py  ignore.py
src/litgraph/utils/: db_lock.py  file_ready.py  ids.py  logging.py  paper_identity.py  paper_registry.py  tool_limits.py  workspace.py
src/litgraph/viz/: api_adapter.py  server.py
src/litgraph/viz/static/: index.html
tests/: conftest.py  mcp_helpers.py  test_bib_linker.py  test_bib_parser.py  test_bib_parser_nested.py  test_context_api.py  test_daemon.py  test_db_lock.py  test_entity_disambiguator.py  test_entity_resolver.py  test_error_hints.py  test_expand_paper_graph.py  test_extract_cache.py  test_file_ready.py  test_ingest_adapters.py  test_jobs.py  test_kuzu_read_only.py  test_llm_extractor.py  test_mcp.py  test_mcp_agent_workflows.py  test_mcp_all_tools.py  test_mcp_cli_parity.py  test_mcp_setup.py  test_md_parser.py  test_package_assets.py  test_paper_identity.py  test_paper_neighbors.py  test_paper_search.py  test_pdf_parser.py  test_pipeline.py  test_quickstart_smoke.py  test_reference_linker.py  test_resolve_project_root.py  test_section_splitter.py  test_v02_features.py  test_v03_graph.py  test_v04_features.py  test_v04_mcp_zotero.py  test_viz_adapter.py  test_viz_server.py  (+2 more)
tests/fixtures/: extracted_fixtures.py  mcp_tool_cases.py  sample_note.md
website/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
website/public/pr-data/: sktime__sktime-mcp__440.json
website/src/: App.tsx  index.css
website/src/components/: CodeGraphViewer.tsx  FlowchartSVG.tsx  LiteratureGraphViewer.tsx  PaperCardList.tsx  ThemeProvider.tsx
website/src/lib/: cgc-exporter.ts  html-exporter.ts  kuzu-coordinator.ts  parser.ts  parser.worker.ts  pr-insights.ts  pr-mock-data.ts  repo-fetcher.ts  repo-provider.ts  supabase-client.ts  svg-exporter.ts  utils.ts
website/src/pages/: Explore.tsx
