[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "literature-graph"
version = "0.1.0"
description = "LiteratureGraphContext: structure paper PDFs into a knowledge graph for AI assistants."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml",
    "pydantic>=2.0",
    "pymupdf",
    "mcp>=1.0.0",
    "kuzu",
    "openai>=1.0",
    "anthropic>=0.25",
    "google-generativeai>=0.5",
    "httpx",
    "pathspec>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
litgraph = "litgraph.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/litgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
