[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "literature-graph"
version = "1.0.2"
description = "LiteratureGraphContext: structure paper PDFs into a knowledge graph for AI assistants."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "LiteratureGraphContext contributors" },
]
keywords = [
    "literature",
    "knowledge-graph",
    "mcp",
    "pdf",
    "research",
    "zotero",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml",
    "pydantic>=2.0",
    "pymupdf",
    "mcp>=1.0.0",
    "kuzu",
    "openai>=1.0",
    "anthropic>=0.25",
    "google-generativeai>=0.5",
    "httpx",
    "pathspec>=0.12.1",
    "watchdog>=4.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
neo4j = [
    "neo4j>=5.15.0",
]

[project.urls]
Homepage = "https://github.com/takapi-s/LiteratureGraphContext"
Documentation = "https://github.com/takapi-s/LiteratureGraphContext/blob/main/docs/TUTORIAL.md"
Repository = "https://github.com/takapi-s/LiteratureGraphContext"
Issues = "https://github.com/takapi-s/LiteratureGraphContext/issues"
Changelog = "https://github.com/takapi-s/LiteratureGraphContext/blob/main/ROADMAP.md"

[project.scripts]
litgraph = "litgraph.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/litgraph"]
# Non-Python assets under src/litgraph/ (viz/dist, viz/static, daemon/static) are
# VCS-tracked and included automatically by hatchling. Do NOT force-include them:
# that duplicates paths and fails the wheel build. website/dist/ is only a local
# Vite output (gitignored); sync into src/litgraph/viz/dist via scripts/build_viz.ps1.

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: builds sdist/wheel; skip in fast local loops with -m \"not slow\"",
]

[tool.coverage.run]
source = ["litgraph"]
branch = true
omit = [
    "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
